--- a/Assignmentcss2.html
+++ b/Assignmentcss2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Assignment</title>
 	<style type="text/css">
 	.side-crop
 	{ max-height: 300px; overflow: hidden; }
